--- a/package.json
+++ b/package.json
@@ -14,6 +14,9 @@
     "express": "^4.17.1",
     "express-graphql": "^0.12.0",
     "graphql": "^15.4.0",
+    "mongoose": "^5.11.11"
+  },
+  "devDependencies": {
     "nodemon": "^2.0.7"
   }
 }
